--- a/pictab/assets/style.css
+++ b/pictab/assets/style.css
@@ -41,3 +41,38 @@ body {
     font-size: 40pt;
     background: linear-gradient(transparent, rgba(180, 180, 180, 0.5), rgba(180, 180, 180, 0.5), transparent);
 }
+
+#new-photo {
+    position: fixed;
+    top: 5%;
+    left: 1%;
+}
+
+.button {
+  display: inline-block;
+  padding: .8em 1.2em;
+  border: none;
+  border-radius: 4px;
+  background-color: #4caf50;
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 20px;
+  text-align: center;
+  text-decoration: none;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.button:hover {
+  background-color: #45a049;
+}
+
+.button:focus {
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+}
+
+.button:active {
+  background-color: #3e8e41;
+}
