--- a/pictab/assets/style.css
+++ b/pictab/assets/style.css
@@ -42,6 +42,14 @@ body {
     background: linear-gradient(transparent, rgba(180, 180, 180, 0.5), rgba(180, 180, 180, 0.5), transparent);
 }
 
+#photo-path {
+  position: fixed;
+  bottom: 20pt;
+  left: 1%;
+  color: white;
+  font-size: 16px;
+}
+
 #new-photo {
     position: fixed;
     top: 5%;
@@ -56,7 +64,7 @@ body {
   background-color: #4caf50;
   color: #fff;
   font-family: sans-serif;
-  font-size: 20px;
+  font-size: 14px;
   text-align: center;
   text-decoration: none;
   letter-spacing: 1px;
