--- a/pictab/assets/style.css
+++ b/pictab/assets/style.css
@@ -1,60 +1,91 @@
 body {
-    margin: 0;
-    padding: 0;
-    background-color: black;
+  margin: 0;
+  padding: 0;
+  background-color: black;
 }
 
 #photo {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh; /* Sets the height of the <div> to 100% of the viewport height */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh; /* Sets the height of the <div> to 100% of the viewport height */
 }
 
 #photo img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* Ensures the image fits within the container without clipping */
+  width: 100%;
+  height: 100%;
+  object-fit: contain; /* Ensures the image fits within the container without clipping */
 }
 
 #photo-bg {
-    z-index: -1;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    background-size: cover;
-    filter: blur(10px);
+  z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  background-size: cover;
+  filter: blur(10px);
+}
+
+#photo-list {
+  position: fixed;
+  padding: 20px;
+  background: black;
+}
+
+.is-hidden {
+  display: none;
+}
+
+#photo-list img {
+  height: 300px;
+  padding: 20px;
+  border-radius: 5px;
 }
 
 #current-time {
-    position: fixed;
-    top: 5%;
-    left: 50%;
-    padding: 10px;
-    color: white;
-    font-family: sans-serif;
-    font-weight: bold;
-    font-size: 40pt;
-    background: linear-gradient(transparent, rgba(180, 180, 180, 0.5), rgba(180, 180, 180, 0.5), transparent);
+  position: fixed;
+  top: 50px;
+  left: 50%;
+  padding: 10px;
+  color: white;
+  font-family: sans-serif;
+  font-weight: bold;
+  font-size: 40pt;
+  background: linear-gradient(transparent, rgba(180, 180, 180, 0.5), rgba(180, 180, 180, 0.5), transparent);
 }
 
 #photo-path {
   position: fixed;
-  bottom: 20pt;
-  left: 1%;
+  bottom: 50px;
+  left: 50px;
   color: white;
   font-size: 16px;
 }
 
 #new-photo {
-    position: fixed;
-    top: 5%;
-    left: 1%;
+  position: fixed;
+  top: 50px;
+  left: 50px;
 }
+
+#starred {
+  position: fixed;
+  top: 50px;
+  left: 150px;
+}
+
+#show-all-starred {
+  position: fixed;
+  top: 120px;
+  left: 50px;
+}
+
+#show-all-starred a { color: white; }
+#show-all-starred a:visited { color: white; }
 
 .button {
   display: inline-block;
